objects/QuestionProgram__c.object
<CustomObject>
    <fields>
        <fullName>Program__c</fullName>
        <description>The program related to this question</description>
        <inlineHelpText>The program related to this question</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Question Programs</relationshipLabel>
        <relationshipName>QuestionPrograms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuestionProgramEID__c</fullName>
        <externalId>true</externalId>
        <label>Question Program EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <description>The question related to this program</description>
        <inlineHelpText>The question related to this program</inlineHelpText>
        <label>Survey Question</label>
        <referenceTo>SurveyQuestion__c</referenceTo>
        <relationshipLabel>Question Programs</relationshipLabel>
        <relationshipName>QuestionPrograms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Question Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>SurveyQuestion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Question Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>